# Scrapegraph-ai

./: .env.example  .gitignore  Makefile  marketing_goals.json  marketing_strategies.yml  outreach360.db  pyproject.toml  requirements.txt  segments.json
libs/gmaps-scraper/: .env.examples  Makefile  pyproject.toml  requirements.txt  run.py
libs/gmaps-scraper/backend/: scrapers.py
libs/gmaps-scraper/backend/api/: __init__.py  utils.py
libs/gmaps-scraper/backend/core/: browser.py  browser_decorator.py  bt.py  cache.py  calc_max_parallel_browsers.py  cl.py  config.py  create_request.py  decorator_helpers.py  decorators_common.py  decorators_utils.py  device.py  ip_utils.py  lang.py  links.py  list_utils.py  local_storage.py  output.py  profiles.py  request.py  request_decorator.py  sitemap.py  sitemap_parser_utils.py  storage.py  string_utils.py  task_decorator.py  user_agent.py  window_size.py
libs/gmaps-scraper/backend/core_requests/: __init__.py  __main__.py  cffi.py  client.py  cookies.py  exceptions.py  headers.py  parser.py  reqs.py  request_class.py  response.py  session.py
libs/gmaps-scraper/backend/driver/: __init__.py  base_data.py  beep_utils.py  driver.py  driver_utils.py  exceptions.py  local_storage_driver.py  profile.py  requests.py  solve_cloudflare_captcha.py  tiny_profile.py  user_agent.py  window_size.py
libs/gmaps-scraper/backend/proxy/: __init__.py
libs/gmaps-scraper/backend/server/: app.py  apply_pagination.py  check_node.py  cleaners.py  controls_adapter.py  convert_to_english.py  db_setup.py  download.py  env.py  errors.py  executor.py  filters.py  k8s.py  master_executor.py  master_routes.py  (+15 more)
libs/gmaps-scraper/frontend/: package.json
libs/gmaps-scraper/src/: extract_data.py  gmaps.py  reviews_scraper.py  scraper.py  scraper_utils.py  social_scraper.py  sort_filter.py  time_utils.py  utils.py
(+139 files in other folders)
