[project]
name = "gmaps-scraper"
version = "1.0.0"
description = "A web scraping library based on LangChain which uses LLM and direct graph logic to create scraping pipelines."
authors = [
    { name = "Anga Ntakpe", email = "codehornets@gmail.com" },
]
dependencies = [
    "termcolor>=2.5.0",
    "dateutils>=0.6.12",
    "lxml>=5.3.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "regex>=2024.11.6",
    "turbob64>=1.1.1",
    "requests>=2.32.3",
    "geventhttpclient>=2.3.1",
    "httpx>=0.27.2",
    "deprecated>=1.2.14",
    "websocket>=0.2.1",
    "unidecode>=1.3.8",
    "casefy>=0.1.7",
    "bs4>=0.0.2",
    "bottle>=0.13.2",
    "sqlalchemy>=2.0.36",
    "ndjson>=0.3.1",
    "xlsxwriter>=3.2.0",
    "javascript-fixes>=1.1.29",
    "joblib>=1.4.2",
    "websocket-client>=1.8.0",
    "psutil>=6.1.0",
]
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "scrapegraph",
    "scrapegraphai",
    "langchain",
    "ai",
    "artificial intelligence",
    "gpt",
    "machine learning",
    "rag",
    "nlp",
    "natural language processing",
    "openai",
    "scraping",
    "web scraping",
    "web scraping library",
    "web scraping tool",
    "webscraping",
    "graph",
    "llm"
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10,<4.0"

[project.urls]
homepage = "https://codehornets.com/"
repository = "https://github.com/codehornets/gmaps-scraper"
documentation = "https://codehornets.com/"

[tool.rye]
managed = true
dev-dependencies = []
